Fixed dark mode and some behind the scenes stuff

--- a/static/css/darkmode-all.css
+++ b/static/css/darkmode-all.css
@@ -1,11 +1,6 @@
 .wrapper{
     background: #373737 !important;
 }
-.controls-container, .saved-container{
-    background: rgba(255,255,255,0.1)!important;
-    /* background: rgba(82, 82, 82, 0.5)!important; */
-    /* background: #525252 !important; */
-}
 .control-container, .savedItems{
     background: #282828 !important;
 }
